Resolving problem with Forbidden request and refactory User service